--- a/CodingApple/JS&JQuery/cart.html
+++ b/CodingApple/JS&JQuery/cart.html
@@ -179,7 +179,9 @@
 
 			// if(newUnder60.length < products.length){
 			// 	for (let i = 0; i < products.length - newUnder60.length; i++) {
-			// 		newUnder60.push({ id: 999, price: 0, title: '' }).display.hidden();
+			// 		const nP = { id: 999, price: 0, title: '' };
+			// 		nP.style.visibility = 'visible';
+			// 		newUnder60.push(nP);
 			// 	}
 			// }
 
