--- a/00_semi/index.html
+++ b/00_semi/index.html
@@ -53,7 +53,7 @@ header video {
   transform: translateX(-50%) translateY(-50%);
 }
 
-header .container {
+header .container{
   position: relative;
   z-index: 2;
 }
@@ -92,7 +92,7 @@ header .overlay {
 <body>
 
 
-<!-- === header === -->
+<!-- ================ header ================ -->
 
 
 <header>
@@ -108,25 +108,155 @@ header .overlay {
 		</div>
 	</div>
 
-		<!-- The HTML5 video element that will create the background video on the header -->
+	<!-- The HTML5 video element that will create the background video on the header -->
 	<video playsinline="playsinline" autoplay="autoplay" muted="muted" loop="loop">
 		<!-- <source src="https://storage.googleapis.com/coverr-main/mp4/Mt_Baker.mp4" type="video/mp4"> -->
 		<source src="./src/indexpage.mp4" type="video/mp4">
 	</video>
 
-		<!-- The header content -->
-	<div class="container vh-100">
-		<div class="d-flex h-100 text-center align-items-center">
+
+	<!-- -------------- navbar -------------- -->
+
+	<div class="container-fluid">
+
+		<nav class="navbar navbar-expand-lg navbar-static-top ">
+			<div>
+				<a class="navbar-brand" href="./index.html">
+					<img src="./src/logoWith.png" alt="">
+				</a>
+			</div>
+
+			<button class="navbar-toggler bg-danger navbar-dark " type="button" data-toggle="collapse"
+				data-target="#navbarNav1" aria-expanded="false" aria-label="Toggle navigation">
+				<span class="navbar-toggler-icon"></span>
+			</button>
+			<div class="collapse navbar-collapse" id="navbarNav1">
+				<ul class="wow_custom navbar-nav ml-auto">
+					<li class="nav-item dropdown">
+						<a class="nav-link dropdown" href="#" data-toggle="dropdown">&emsp;운동 루틴&emsp; </a>
+						<ul class="dropdown-menu">
+							<li><a class="dropdown-item" href="#"> 부위별 운동</a></li>
+							<li><a class="dropdown-item" href="#"> 전신 운동 </a></li>
+						</ul>
+					</li>
+					<li class="nav-item dropdown">
+						<a class="nav-link  dropdown" href="#" data-toggle="dropdown">&emsp;칼로리 계산&emsp; </a>
+						<ul class="dropdown-menu">
+							<li><a class="dropdown-item" href="#"> 음식별 칼로리</a></li>
+							<li><a class="dropdown-item" href="#"> 운동별 칼로리</a></li>
+							<li><a class="dropdown-item" href="#"> 일일 권장 칼로리 </a></li>
+						</ul>
+					</li>
+					<li class="nav-item">
+						<a class="nav-link" aria-current="page" href="#">&emsp;운동 장소&emsp;</a>
+					</li>
+					<li class="nav-item dropdown">
+						<a class="nav-link  dropdown" href="#" data-toggle="dropdown"> &emsp;커뮤니티&emsp;</a>
+						<ul class="dropdown-menu">
+							<li><a class="dropdown-item" href="#"> 자유게시판</a></li>
+							<li><a class="dropdown-item" href="#"> 갤러리 </a></li>
+							<li><a class="dropdown-item" href="#"> 루틴 공유 </a></li>
+							<li><a class="dropdown-item" href="#"> 문의게시판 </a></li>
+						</ul>
+					</li>
+					<li class="nav-item dropdown">
+						<a class="nav-link  dropdown" href="#" data-toggle="dropdown"> &emsp;마이페이지&emsp; </a>
+						<ul class="dropdown-menu dropdown-menu-right">
+							<li><a class="dropdown-item" href="#"> 회원정보</a></li>
+							<li><a class="dropdown-item" href="#"> 캘린더 </a></li>
+							<li><a class="dropdown-item" href="#"> 나의 글과 댓글 </a></li>
+						</ul>
+					</li>
+				</ul>
+			</div>
+		</nav>
+
+	</div>
+
+	<!-- ------------ The header content ------------ -->
+
+
+
+	<div class="container" id="sec0">
+
+
+
+		<div class="d-flex h-100 text-center align-items-center" id="sec1">
+
+
+
 			<div class="w-100 text-white">
 				<p class="lead mb-0">Need any exercise buddy? </p>
 				<h1 class="display-3">Workout With</h1>
+
+
+
+				</div>
+
 			</div>
+
+
+
+			<!-- <div class="">
+
+			</div> -->
 		</div>
+
+
 	</div>
+
+
+
 </header>
 
+<footer>
+
+					<div class="section ">
+
+						<div class="car0">
+
+							<div class="viewAllChall mb-3">
+								<a href="#">
+									<img src="./src/viewAllChall.png" alt="">
+								</a>
+							</div>
+
+							<div id="demo" class="carousel slide" data-ride="carousel">
+
+								<!-- Indicators -->
+								<ul class="carousel-indicators">
+									<li data-target="#demo" data-slide-to="0" class="active"></li>
+									<li data-target="#demo" data-slide-to="1"></li>
+									<li data-target="#demo" data-slide-to="2"></li>
+								</ul>
+
+								<!-- The slideshow -->
+								<div class="carousel-inner">
+									<div class="carousel-item active">
+										<img src="../resources/image/flower1.PNG" alt="Los Angeles" width="1100" height="500">
+									</div>
+									<div class="carousel-item">
+										<img src="../resources/image/flower2.PNG" alt="Chicago" width="1100" height="500">
+									</div>
+									<div class="carousel-item">
+										<img src="../resources/image/flower3.PNG" alt="New York" width="1100" height="500">
+									</div>
+								</div>
+
+								<!-- Left and right controls -->
+								<a class="carousel-control-prev" href="#demo" data-slide="prev">
+									<span class="carousel-control-prev-icon"></span>
+								</a>
+								<a class="carousel-control-next" href="#demo" data-slide="next">
+									<span class="carousel-control-next-icon"></span>
+								</a>
+							</div>
+						</div>
+
+</footer>
+
 <!-- Page section example for content below the video header -->
-<section class="my-5">
+<!-- <section class="my-5">
 	<div class="container">
 		<div class="row">
 			<div class="col-md-8 mx-auto">
@@ -143,112 +273,13 @@ header .overlay {
 			</div>
 		</div>
 	</div>
-</section>
+</section> -->
 
 
-<!-- === navbar === -->
 
-<div class="container-fluid">
-
-	<nav class="navbar navbar-expand-lg navbar-static-top ">
-		<div>
-			<a class="navbar-brand" href="./index.html">
-				<img src="./src/logoWith.png" alt="">
-			</a>
-		</div>
-
-		<button class="navbar-toggler bg-danger navbar-dark " type="button" data-toggle="collapse" data-target="#navbarNav1" aria-expanded="false" aria-label="Toggle navigation">
-				<span class="navbar-toggler-icon"></span>
-		</button>
-		<div class="collapse navbar-collapse" id="navbarNav1">
-			<ul class="wow_custom navbar-nav ml-auto">
-				<li class="nav-item dropdown">
-					<a class="nav-link dropdown" href="#" data-toggle="dropdown">&emsp;운동 루틴&emsp; </a>
-					<ul class="dropdown-menu">
-						<li><a class="dropdown-item" href="#"> 부위별 운동</a></li>
-						<li><a class="dropdown-item" href="#"> 전신 운동 </a></li>
-					</ul>
-				</li>
-				<li class="nav-item dropdown">
-					<a class="nav-link  dropdown" href="#" data-toggle="dropdown">&emsp;칼로리 계산&emsp; </a>
-					<ul class="dropdown-menu">
-						<li><a class="dropdown-item" href="#"> 음식별 칼로리</a></li>
-						<li><a class="dropdown-item" href="#"> 운동별 칼로리</a></li>							<li><a class="dropdown-item" href="#"> 일일 권장 칼로리 </a></li>
-					</ul>
-				</li>
-				<li class="nav-item">
-					<a class="nav-link" aria-current="page" href="#">&emsp;운동 장소&emsp;</a>
-				</li>
-				<li class="nav-item dropdown">
-					<a class="nav-link  dropdown" href="#" data-toggle="dropdown"> &emsp;커뮤니티&emsp;</a>
-					<ul class="dropdown-menu">
-						<li><a class="dropdown-item" href="#"> 자유게시판</a></li>
-						<li><a class="dropdown-item" href="#"> 갤러리 </a></li>
-						<li><a class="dropdown-item" href="#"> 루틴 공유 </a></li>
-						<li><a class="dropdown-item" href="#"> 문의게시판 </a></li>
-					</ul>
-				</li>
-				<li class="nav-item dropdown">
-					<a class="nav-link  dropdown" href="#" data-toggle="dropdown"> &emsp;마이페이지&emsp; </a>
-					<ul class="dropdown-menu dropdown-menu-right">
-						<li><a class="dropdown-item" href="#"> 회원정보</a></li>
-						<li><a class="dropdown-item" href="#"> 캘린더 </a></li>
-						<li><a class="dropdown-item" href="#"> 나의 글과 댓글 </a></li>
-					</ul>
-				</li>
-			</ul>
-		</div>
-	</nav>
-
-</div>
 
 <!-- === section === -->
 
-<div class="section">
-
-
-
-<div class="car0">
-
-	<div class="viewAllChall mb-3">
-		<a href="#">
-			<img src="./src/viewAllChall.png" alt="">
-		</a>
-	</div>
-
-	<div id="demo" class="carousel slide" data-ride="carousel">
-
-	<!-- Indicators -->
-	<ul class="carousel-indicators">
-		<li data-target="#demo" data-slide-to="0" class="active"></li>
-		<li data-target="#demo" data-slide-to="1"></li>
-		<li data-target="#demo" data-slide-to="2"></li>
-	</ul>
-
-	<!-- The slideshow -->
-	<div class="carousel-inner">
-		<div class="carousel-item active">
-			<img src="../resources/image/flower1.PNG" alt="Los Angeles" width="1100" height="500">
-		</div>
-		<div class="carousel-item">
-			<img src="../resources/image/flower2.PNG" alt="Chicago" width="1100" height="500">
-		</div>
-		<div class="carousel-item">
-			<img src="../resources/image/flower3.PNG" alt="New York" width="1100" height="500">
-		</div>
-	</div>
-
-	<!-- Left and right controls -->
-	<a class="carousel-control-prev" href="#demo" data-slide="prev">
-		<span class="carousel-control-prev-icon"></span>
-	</a>
-	<a class="carousel-control-next" href="#demo" data-slide="next">
-		<span class="carousel-control-next-icon"></span>
-	</a>
-</div>
-</div>
-
-</div>
 
 
 		<!-- Option 1: jQuery and Bootstrap Bundle (includes Popper) -->
